[tool.poetry]
name = "pandasai-sql"
version = "0.1.2"
description = "SQL connectors integration for PandasAI"
authors = ["Gabriele Venturi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandasai = ">=3.0.0"
scipy = "1.10.1"
sqlalchemy = ">=1.4,<3"
pymysql = "^1.1.0"
psycopg2-binary = "^2.9.7"
sqlalchemy-cockroachdb = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
