[tool.poetry]
name = "pandasai-sql"
version = "0.1.6"
description = "SQL integration for PandaAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandasai = ">=3.0.0b4"
sqlalchemy = "^2.0.0"
numpy = ">=1.23.2,<2.0.0"
psycopg2-binary = { version = "^2.9.10", optional = true }
pymysql = { version = "^1.1.1", optional = true }
cockroachdb = { version = "^0.3.5", optional = true }

[tool.poetry.extras]
postgres = ["psycopg2-binary"]
mysql = ["pymysql"]
cockroach = ["cockroachdb"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
