[tool.poetry]
name = "pandasai-yfinance"
version = "0.1.3"
description = "YFinance integration for PandaAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandasai = ">=3.0.0b4"
yfinance = "^0.2.35"
numpy = "1.23.2"
pyarrow = "^14.0.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
