[tool.poetry]
name = "pandasai-lancedb"
version = "0.1.0"
description = "LanceDB integration for PandasAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandasai = "^2.2.15"
lancedb = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
