[tool.poetry]
name = "pandasai-milvus"
version = "0.1.0"
description = "Milvus integration for PandasAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandasai = "^3.0.0"
pymilvus = "^2.4.0"
milvus-model = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
