[tool.poetry]
name = "pandasai-pinecone"
version = "0.1.0"
description = "Pinecone integration for PandasAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandasai = "^2.2.15"
pinecone-client = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
