[tool.poetry]
name = "pandasai-bedrock"
version = "0.1.0"
description = "Amazon bedrock integration for PandasAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandasai = "^3.0.0"
boto3 = "^1.34.59"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
