[tool.poetry]
name = "pandasai-google"
version = "0.1.0"
description = "Google AI integration for PandasAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandasai = "^3.0.0"
google-generativeai = "^0.3.2"
google-cloud-aiplatform = "^1.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
