[tool.poetry]
name = "pandasai-ibm"
version = "0.1.0"
description = "IBM WatsonX integration for PandasAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandasai = "^3.0.0"
ibm-watsonx-ai = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
