[tool.poetry]
name = "pandasai-langchain"
version = "0.1.0"
description = "LangChain LLMs integration for PandasAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandasai = "^3.0.0"
langchain = "^0.1.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.0.38,<0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
