[tool.poetry]
name = "pandasai-langchain"
version = "0.1.1"
description = "Langchain integration for PandaAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandasai = ">=3.0.0a0"
langchain = "^0.1.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.0.38,<0.1"
numpy = "1.23.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
