[tool.poetry]
name = "pandasai-langchain"
version = "0.1.3"
description = "Langchain integration for PandaAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
pandasai = ">=3.0.0b4"
langchain = "^0.1.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.0.38,<0.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
