[tool.poetry]
name = "pandasai-local"
version = "0.1.0"
description = "Local LLMs integration for PandasAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandasai = "^3.0.0"
openai = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
