[tool.poetry]
name = "pandasai-openai"
version = "0.1.0"
description = "OpenAI integration for PandasAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandasai = "^3.0.0"
openai = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
