[tool.poetry]
name = "pandasai-databricks"
version = "0.1.0"
description = "Databricks connector integration for PandasAI"
authors = ["Gabriele Venturi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandasai = "^3.0.0"
pandasai-sql = "^0.1.0"
sqlalchemy-databricks = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
