[tool.poetry]
name = "pandasai-databricks"
version = "0.1.2"
description = "Databricks connector integration for PandaAI"
authors = ["Gabriele Venturi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandasai = ">=3.0.0-beta.0"
pandasai-sql = "^0.1.0"
pyarrow = "^14.0.1"
databricks-sql-connector = {extras = ["sqlalchemy"], version = "^3.6.0"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pandasai-sql = { path = "../../../connectors/sql", develop = true }
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
