[tool.poetry]
name = "pandasai-oracle"
version = "0.1.0"
description = "Oracle connector integration for PandasAI"
authors = ["Gabriele Venturi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandasai = "^3.0.0"
pandasai-sql = "^0.1.0"
cx_oracle = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
