[tool.poetry]
name = "pandasai-snowflake"
version = "0.1.0"
description = "Snowflake connector integration for PandasAI"
authors = ["Gabriele Venturi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandasai = "^3.0.0"
pandasai-sql = "^0.1.0"
snowflake-sqlalchemy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
