[tool.poetry]
name = "pandasai-snowflake"
version = "0.1.3"
description = "Snowflake connector integration for PandaAI"
authors = ["Gabriele Venturi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandasai = ">=3.0.0-beta.0"
pandasai-sql = "^0.1.0"
snowflake-sqlalchemy = "^1.5.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pandasai-sql = { path = "../../../connectors/sql", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
