[tool.poetry]
name = "pandasai-chromadb"
version = "0.1.2"
description = "ChromaDB integration for PandaAI"
authors = ["Gabriele Venturi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandasai = ">=3.0.0-beta.0"
chromadb = "^0.4.22"
numpy = "1.23.2"
pydantic = "^2.0.0"
onnxruntime = ">=1.14.1,<1.20"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
