[tool.poetry]
name = "pandasai-lancedb"
version = "0.1.1"
description = "LanceDB integration for PandasAI"
authors = ["Gabriele Venturi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandasai = "^3.0.0"
lancedb = "^0.11.0"
sentence-transformers = {version = "^2.2.2", optional = true}

[tool.poetry.extras]
sentence-transformers = ["sentence-transformers"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
