[tool.poetry]
name = "pandasai-pinecone"
version = "0.1.2"
description = "Pinecone integration for PandaAI"
authors = ["Gabriele Venturi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandasai = ">=3.0.0-beta.0"
pinecone-client = "^3.0.0"
numpy = "1.23.2"
sentence-transformers = "^2.2.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
